--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -1,3 +1,20 @@
-.privet {
-  color: black;
+@import './normalize';
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+  padding: 0;
+  line-height: 100%;
+  font-weight: normal;
+  font-size: 14px;
 }
