Update for charts

--- a/src/assets/styles/_colors.scss
+++ b/src/assets/styles/_colors.scss
@@ -1,1 +1,12 @@
-$data: black;
+/**
+ * @at-root
+ */
+$bg-app: #121920;
+$bg-dashboard: #171f2a;
+$bg-border: #141923;
+
+/**
+ * @colors
+ */
+$dark: #0c0c0c;
+$light: #fff;
