--- a/src/assets/styles/_vars.scss
+++ b/src/assets/styles/_vars.scss
@@ -1,5 +1,4 @@
-$data: black;
-
-// .privet {
-//   color: black;
-// }
+$regular: 'Montserrat Regular';
+$light: 'Montserrat Light';
+$medium: 'Montserrat Medium';
+$bold: 'Montserrat Black';
