--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -1,9 +1,17 @@
 @import './normalize';
+@import './dashboard';
+@import './schema';
+@import './fonts';
 
 *,
 *::before,
 *::after {
   box-sizing: border-box;
+}
+
+p {
+  margin: 0;
+  padding: 0;
 }
 
 h1,
@@ -14,7 +22,37 @@ h5,
 h6 {
   margin: 0;
   padding: 0;
-  line-height: 100%;
-  font-weight: normal;
   font-size: 14px;
+  font-weight: normal;
+  line-height: 100%;
+}
+
+body {
+  font-family: $regular;
+  font-size: 12px;
+  font-weight: normal;
+}
+
+aside,
+nav,
+ul,
+li {
+  margin: 0;
+  padding: 0;
+  list-style: none !important;
+}
+
+button {
+  margin: 0;
+  padding: 0;
+  border: none;
+  background: none;
+  appearance: none !important;
+}
+
+a {
+  display: inline-block;
+  width: max-content !important;
+  text-decoration: none;
+  color: $dark;
 }
