--- a/src/assets/styles/_colors.scss
+++ b/src/assets/styles/_colors.scss
@@ -8,5 +8,10 @@ $bg-border: #141923;
 /**
  * @colors
  */
-$dark: #0c0c0c;
+$dark: #556377;
 $light: #fff;
+
+$sidebar-top: #141b23;
+$sidebar-bottom: #090d11;
+
+$active-bg-link: #602dd3;
