--- a/src/app/components/Sidebar/Sidebar.scss
+++ b/src/app/components/Sidebar/Sidebar.scss
@@ -1,8 +1,89 @@
+/* stylelint-disable at-rule-no-unknown, declaration-empty-line-before, at-rule-empty-line-before */
+
 .sidebar {
-  top: 0;
   position: sticky;
+  top: 0;
+  height: calc(100vh - 40px);
+  margin-top: 20px;
 
   &_wrapper {
-    color: black;
+    overflow: hidden;
+    height: inherit;
+    border-top-left-radius: 24px;
+    border-bottom-left-radius: 24px;
+    background: linear-gradient(to bottom, $sidebar-top, $sidebar-bottom);
+
+    &-aside {
+      height: inherit;
+      margin-top: 56px;
+    }
+
+    &-navbar {
+      display: flex;
+      flex: 0 1 auto;
+      flex-direction: column;
+      justify-content: space-between;
+      height: inherit;
+    }
+
+    &-logo {
+      margin-top: 26px;
+
+      &_link {
+        width: 100% !important;
+
+        span {
+          position: relative;
+          display: block;
+          width: 100%;
+          height: 22px;
+          background: url('@img/Logotype.svg') no-repeat center center;
+          background-size: contain;
+        }
+      }
+    }
+  }
+
+  &_navbar {
+    &-active {
+      color: $light !important;
+      border-radius: 15px;
+      background: $active-bg-link;
+    }
+
+    &-list {
+      &-features {
+        letter-spacing: 0.4px;
+        font-weight: 600;
+
+        @include flex;
+
+        a {
+          width: 100% !important;
+          height: 100%;
+          padding: 16px 36px;
+          transition: 0.25s ease all;
+          color: $dark;
+
+          &:hover {
+            transition: 0.25s ease all;
+            color: $light !important;
+            border-radius: 15px;
+            background: $active-bg-link;
+          }
+        }
+
+        li {
+          margin-bottom: 12px;
+        }
+      }
+
+      &-actions {
+        color: $dark;
+        font-weight: 600;
+
+        @include flex;
+      }
+    }
   }
 }
