--- a/src/assets/styles/_vars.scss
+++ b/src/assets/styles/_vars.scss
@@ -1,4 +1,23 @@
+/* stylelint-disable at-rule-no-unknown */
+
+$bp-lg: 1200px;
+$bp-sm: 768px;
+$bp-md: 992px;
+$bp-xs: 576px;
+
+$lg: 1140px;
+$sm: 720px;
+$md: 960px;
+$xs: 540px;
+
 $regular: 'Montserrat Regular';
 $light: 'Montserrat Light';
 $medium: 'Montserrat Medium';
 $bold: 'Montserrat Black';
+
+@mixin flex {
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+  flex: 0 0 auto;
+}
