--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -29,7 +29,8 @@ h6 {
 
 body {
   font-family: $regular;
-  font-size: 12px;
+  color: $light;
+  font-size: 14px;
   font-weight: normal;
 }
 
@@ -54,5 +55,5 @@ a {
   display: inline-block;
   width: max-content !important;
   text-decoration: none;
-  color: $dark;
+  color: $light;
 }
