--- a/src/assets/styles/_colors.scss
+++ b/src/assets/styles/_colors.scss
@@ -15,3 +15,9 @@ $sidebar-top: #141b23;
 $sidebar-bottom: #090d11;
 
 $active-bg-link: #602dd3;
+
+$dashboard-top: #171f2a;
+$dashboard-bottom: #0d1117;
+
+$profile-top: #151c26;
+$profile-bottom: #0d1117;
