--- a/src/app/components/Profile/Profile.scss
+++ b/src/app/components/Profile/Profile.scss
@@ -1,3 +1,51 @@
 .profile {
-  user-select: none;
+  height: inherit;
+  padding-top: 5rem;
+
+  &-wrapper {
+    height: inherit;
+    border-top: 1em solid $bg-border;
+    border-right: 1em solid $bg-border;
+    border-bottom: 1em solid $bg-border;
+    border-top-right-radius: 24px;
+    border-bottom-right-radius: 24px;
+    background: linear-gradient(to top, $profile-bottom, $profile-top);
+
+    &_edit {
+      position: relative;
+      display: block;
+      width: 100%;
+      height: 1.25rem;
+      cursor: pointer;
+      background: url('@img/edit.svg') no-repeat center left;
+
+      &:hover {
+        background: url('@img/edit-active.svg') no-repeat bottom right !important;
+      }
+    }
+
+    &_user {
+      padding-top: 2rem;
+      text-align: center;
+
+      &-title {
+        color: $light;
+        font-family: $medium;
+        font-size: 1rem;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: $bp-md) {
+  .profile {
+    margin-bottom: 6rem;
+
+    &-wrapper {
+      height: inherit;
+      border: 1em solid $bg-border;
+      border-radius: 24px;
+      background: linear-gradient(to top, $profile-bottom, $profile-top);
+    }
+  }
 }
