--- a/src/assets/styles/_dashboard.scss
+++ b/src/assets/styles/_dashboard.scss
@@ -1,22 +1,22 @@
 .dashboard {
   position: relative;
 
-  &_wrapper {
-    top: 0;
-    height: inherit;
-    margin-top: 1rem;
-    background: linear-gradient(to top, $dashboard-bottom, $dashboard-top);
-    margin-bottom: 2rem;
+  &-wrapper {
+    position: relative;
+  }
+
+  &_main {
+    &-wrapper {
+      position: sticky;
+      top: 0;
+    }
   }
 
   &_profile {
     &-wrapper {
+      position: sticky;
       top: 0;
-      height: calc(100vh - 2rem);
-      margin-top: 1rem;
-      border-top-right-radius: 24px;
-      border-bottom-right-radius: 24px;
-      background: linear-gradient(to top, $profile-bottom, $profile-top);
+      height: calc(100vh - 10rem);
     }
   }
 }
