--- a/src/assets/styles/_schema.scss
+++ b/src/assets/styles/_schema.scss
@@ -8,34 +8,11 @@
   margin: 0 auto;
 }
 
-@media (max-width: $bp-lg) {
-  .container {
-    max-width: $lg;
-  }
-}
-
-@media (max-width: $bp-md) {
-  .container {
-    max-width: $md;
-  }
-}
-
-@media (max-width: $bp-sm) {
-  .container {
-    max-width: $sm;
-  }
-}
-
-@media (max-width: $bp-xs) {
-  .container {
-    max-width: $xs;
-  }
-}
-
 .row {
   display: flex;
   flex: 1 1 auto;
-  margin: 0 -15px;
+  // margin: 0 -15px;
+  flex-wrap: wrap;
 }
 
 .d-flex {
@@ -96,9 +73,12 @@
 
 @for $i from 1 through 12 {
   .col-#{$i} {
-    width: calc((100% * #{$i}) / 12) !important;
+    max-width: calc((100% * #{$i}) / 12) !important;
     position: relative;
-    padding: 0 15px;
+    flex-wrap: wrap;
+    // padding: 0 15px;
+    width: 100%;
+    flex: 0 0 calc(100% * (1 - (1 / #{$i})));
   }
 }
 
@@ -161,5 +141,86 @@
 
   &-right {
     text-align: right !important;
+  }
+}
+
+.bg {
+  &-dark {
+    background: $bg-dark;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+  }
+}
+
+@media (max-width: $bp-lg) {
+  .container {
+    max-width: $lg;
+  }
+
+  @for $i from 1 through 12 {
+    .col-lg-#{$i} {
+      max-width: calc((100% * #{$i}) / 12) !important;
+      position: relative;
+      flex-wrap: wrap;
+      padding: 0 15px;
+      width: 100%;
+      flex: 0 0 calc(100% * (1 - (1 / #{$i})));
+    }
+  }
+}
+
+@media (max-width: $bp-md) {
+  .container {
+    max-width: $md;
+  }
+
+  @for $i from 1 through 12 {
+    .col-md-#{$i} {
+      max-width: calc((100% * #{$i}) / 12) !important;
+      position: relative;
+      flex-wrap: wrap;
+      padding: 0 15px;
+      width: 100%;
+      flex: 0 0 calc(100% * (1 - (1 / #{$i})));
+    }
+  }
+}
+
+@media (max-width: $bp-sm) {
+  .container {
+    max-width: $sm;
+  }
+
+  @for $i from 1 through 12 {
+    .col-sm-#{$i} {
+      max-width: calc((100% * #{$i}) / 12) !important;
+      position: relative;
+      flex-wrap: wrap;
+      padding: 0 15px;
+      width: 100%;
+      flex: 0 0 calc(100% * (1 - (1 / #{$i})));
+    }
+  }
+}
+
+@media (max-width: $bp-xs) {
+  .container {
+    max-width: $xs;
+  }
+
+  @for $i from 1 through 12 {
+    .col-xs-#{$i} {
+      max-width: calc((100% * #{$i}) / 12) !important;
+      position: relative;
+      flex-wrap: wrap;
+      padding: 0 15px;
+      width: 100%;
+      flex: 0 0 calc(100% * (1 - (1 / #{$i})));
+    }
   }
 }
