Embedded some components

--- a/src/app/components/Header/Header.scss
+++ b/src/app/components/Header/Header.scss
@@ -1,3 +1,15 @@
 .header {
-  color: black;
+  padding-top: 2rem;
+
+  &-wrapper {
+    padding: 0 15px;
+
+    &_analytics {
+      &-title {
+        font-size: 1rem;
+        color: $light;
+        font-family: $medium;
+      }
+    }
+  }
 }
