--- a/src/app/components/Dashboard/Dashboard.scss
+++ b/src/app/components/Dashboard/Dashboard.scss
@@ -57,6 +57,7 @@
         z-index: -1;
         background-position: 100% 150%;
         background-attachment: fixed;
+        padding: 0 2rem;
       }
     }
   }
