Impressions and Plays charts in the real time

--- a/src/assets/styles/_colors.scss
+++ b/src/assets/styles/_colors.scss
@@ -21,3 +21,8 @@ $dashboard-bottom: #0d1117;
 
 $profile-top: #151c26;
 $profile-bottom: #0d1117;
+
+$chart-purple: #602dd3;
+$chart-blue: #3f4af1;
+$chart-red: #ef263d;
+$chart-schema: #1c2430;
