--- a/src/app/components/LazyLoading/LazyLoading.scss
+++ b/src/app/components/LazyLoading/LazyLoading.scss
@@ -1,5 +1,55 @@
 .lazy {
   &-loading {
-    color: black;
+    position: fixed;
+    z-index: 1000;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transition: 0.5s ease-in-out all;
+    opacity: 0.9;
+    background-color: $lazy-loading;
+
+    &_container {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      display: flex;
+      height: 75px;
+      margin: 0 auto;
+      transform: translate(-50%, -50%);
+    }
+
+    &_item {
+      width: 12px;
+      height: 50px;
+      margin-right: 6px;
+      transform: translateY(25px);
+      border-radius: 4px;
+      background-color: $active-bg-link;
+      box-shadow: 0 0 4px $active-bg-link;
+
+      &-first {
+        animation: blockMove 0.5s ease infinite alternate;
+      }
+
+      &-second {
+        animation: blockMove 0.5s ease 0.08s infinite alternate;
+      }
+
+      &-third {
+        animation: blockMove 0.5s ease 0.16s infinite alternate;
+      }
+
+      &-fourth {
+        animation: blockMove 0.5s ease 0.24s infinite alternate;
+      }
+    }
+  }
+}
+
+@keyframes blockMove {
+  to {
+    transform: translateY(0);
   }
 }
