--- a/src/app/components/Charts/CustomToolTip/CustomToolTip.scss
+++ b/src/app/components/Charts/CustomToolTip/CustomToolTip.scss
@@ -4,13 +4,28 @@
       &_wrapper {
         width: 100%;
         height: 100%;
+        position: relative;
         padding: 0.2rem 0.8rem;
         border-radius: 12px;
+        margin-top: 3rem;
       }
 
       &_label {
         color: $light;
         font-size: 10px;
+      }
+
+      &_arrow {
+        svg {
+          width: 14px;
+          height: 14px;
+          position: absolute;
+          background-position: center center;
+          transform: translateX(-50%) rotate(90deg);
+          left: 50%;
+          bottom: -4px;
+          z-index: -1;
+        }
       }
     }
   }
