--- a/src/app/components/Charts/CustomToolTip/CustomToolTip.scss
+++ b/src/app/components/Charts/CustomToolTip/CustomToolTip.scss
@@ -7,7 +7,7 @@
         position: relative;
         padding: 0.2rem 0.8rem;
         border-radius: 12px;
-        margin-top: 3rem;
+        // margin-top: 3rem;
       }
 
       &_label {
@@ -17,13 +17,13 @@
 
       &_arrow {
         svg {
-          width: 14px;
-          height: 14px;
+          width: 1rem;
+          height: 1rem;
           position: absolute;
           background-position: center center;
           transform: translateX(-50%) rotate(90deg);
           left: 50%;
-          bottom: -4px;
+          bottom: -0.25rem;
           z-index: -1;
         }
       }
