--- a/src/assets/styles/_animations.scss
+++ b/src/assets/styles/_animations.scss
@@ -1,1 +1,19 @@
 @import '../../../node_modules/animate.css/animate.compat.css';
+
+.my-node-enter {
+  opacity: 0;
+}
+
+.my-node-enter-active {
+  opacity: 1;
+  transition: opacity 200ms;
+}
+
+.my-node-exit {
+  opacity: 1;
+}
+
+.my-node-exit-active {
+  opacity: 0;
+  transition: opacity 200ms;
+}
