--- a/src/assets/styles/_colors.scss
+++ b/src/assets/styles/_colors.scss
@@ -31,6 +31,9 @@ $lazy-loading: #141b23;
 
 $btn-border: #364151;
 $btn-border-active: #fff;
+$btn-purple: #602dd3;
+$btn-blue: #3f4af1;
+$btn-red: #ef263d;
 
 $inp-field: #141b24;
 $inp-search: #1c2430;
