--- a/src/assets/styles/_btn.scss
+++ b/src/assets/styles/_btn.scss
@@ -3,7 +3,7 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  color: $light;
+  padding: 0.8rem 1rem;
   color: $dark;
   border: 1px solid $dark;
   border-radius: 16px;
@@ -12,27 +12,47 @@
 
   &-icon {
     &-user {
-      transition: 0.25s ease-in-out all;
       position: relative;
       display: block;
       width: 1rem;
       height: 1rem;
       margin-right: 1rem;
+      transition: 0.25s ease-in-out all;
       background: url('@img/user.svg') no-repeat center center;
       background-size: contain;
     }
   }
 
+  &-sign {
+    &-up {
+      display: block;
+      width: 100% !important;
+      transition: 0.25s ease-in-out all;
+      text-align: center;
+      color: $dark;
+      border: 1px solid transparent;
+      box-shadow: 0 0 0.2rem $btn-blue;
+
+      &:hover {
+        transition: 0.25s ease-in-out all;
+        color: $light;
+        border: 1px solid transparent;
+        background: $btn-blue;
+      }
+    }
+  }
+
   &-send {
-    padding: 0.8rem 1rem;
     transition: 0.25s ease-in-out all;
+    border: 1px solid transparent;
+    box-shadow: 0 0 0.2rem $btn-purple;
 
     &:hover {
       transition: 0.25s ease-in-out all;
       color: #fff;
-      border: 1px solid transparent;
-      background: $active-bg-link;
-      box-shadow: 0 0 0.2rem $active-bg-link;
+      border: 1px solid $btn-purple;
+      background: $btn-purple;
+      box-shadow: 0 0 0.2rem $btn-purple;
 
       .btn-icon-user {
         transition: 0.25s ease-in-out all;
