--- a/src/assets/styles/_colors.scss
+++ b/src/assets/styles/_colors.scss
@@ -28,6 +28,7 @@ $chart-red: #ef263d;
 $chart-schema: #1c2430;
 
 $lazy-loading: #141b23;
+$lazy-loading-bg: #602dd3;
 
 $btn-border: #364151;
 $btn-border-active: #fff;
