--- a/src/assets/styles/_colors.scss
+++ b/src/assets/styles/_colors.scss
@@ -39,3 +39,6 @@ $btn-red: #ef263d;
 $inp-field: #141b24;
 $inp-search: #1c2430;
 $inp-purple: #602dd3;
+
+$user-bg: #1d222f;
+$user-border-bg: #1c2430;
