--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -1,10 +1,10 @@
-@import './normalize';
-@import './dashboard';
-@import './schema';
-@import './fonts';
-@import './form';
-@import './btn';
-@import './modal';
+// @import './normalize';
+// @import './dashboard';
+// @import './schema';
+// @import './fonts';
+// @import './form';
+// @import './btn';
+// @import './modal';
 
 *,
 *::before,
