--- a/src/app/components/Charts/CustomAlterPeriodDate/CustomAlterPeriodDate.scss
+++ b/src/app/components/Charts/CustomAlterPeriodDate/CustomAlterPeriodDate.scss
@@ -23,6 +23,7 @@
         &_credentials {
           position: absolute;
           z-index: 100;
+          overflow: hidden;
           width: 100%;
           text-align: center;
           border: 0.1rem solid $btn-border;
@@ -30,7 +31,6 @@
           border-bottom-right-radius: 1rem;
           border-bottom-left-radius: 1rem;
           background: $chart-schema;
-          overflow: hidden;
 
           &_wrapper {
             width: 100%;
@@ -59,21 +59,21 @@
               }
 
               &::after {
-                transition: 0.25s ease all;
                 content: '';
                 position: absolute;
                 top: 0;
                 left: 0;
-                width: 0%;
+                width: 0;
                 height: 100%;
+                transition: 0.25s ease all;
                 background: $btn-border;
               }
 
               &:hover {
                 &::after {
-                  width: 100%;
                   // opacity: 0.15;
                   z-index: -1;
+                  width: 100%;
                 }
               }
             }
@@ -101,8 +101,7 @@
                 &-date {
                   &_dropdown {
                     transition: 0.25s ease all;
-                    background: url('@img/down-arrow-active.svg') no-repeat
-                      center center;
+                    background: url('@img/down-arrow-active.svg') no-repeat center center;
                   }
                 }
               }
