--- a/src/app/components/Charts/CustomToolTip/CustomToolTip.scss
+++ b/src/app/components/Charts/CustomToolTip/CustomToolTip.scss
@@ -1,13 +1,28 @@
 .custom {
   &-tool {
     &-tip {
+      &_tiny {
+        width: 100%;
+        height: 100%;
+        position: relative;
+        margin-top: 0.5rem;
+        margin-left: 1rem;
+
+        &-label {
+          font-family: $medium;
+          color: $light;
+          font-size: 1.2rem;
+        }
+      }
+
       &_wrapper {
         width: 100%;
         height: 100%;
         position: relative;
         padding: 0.2rem 0.8rem;
         border-radius: 12px;
-        // margin-top: 3rem;
+        // transform: translateX(-1.8rem);
+        margin-top: 3rem;
       }
 
       &_label {
