--- a/src/assets/styles/animations.css
+++ b/src/assets/styles/animations.css
@@ -1,4 +1,4 @@
-@import '../../../node_modules/animate.css/animate.compat.css';
+@import '../../../node_modules/animate.css/animate.min.css';
 
 .dropdown-enter {
   opacity: 0;
